# FastFortranBoltzmann

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  job_5853452.err  job_5853453.err  job_5853454.err  job_5853606.out  job_5853609.out  job_5854085.out  job_5854088.out  job_5854613.out  job_5854728.err  job_5855471.err  job_5871631.out  job_5871632.err  job_5871634.err  job_5871634.out  job_5871635.out  job_5878730.out  job_5878731.err  job_5889239.out  job_5889271.out  job_5889272.err  job_5889274.err  job_5895463.err  job_5895463.out  job_5895465.err  job_5895465.out  job_5895466.out  job_5895467.out  job_5895718.out  job_5895720.err  job_5895723.out  job_5900184.out  job_5914398.err  job_5914399.err  job_5914517.out  job_5914647.out  job_5914649.err  (+13 more)
bench/: results_SL_1debe35  results_SL_289a2f3  results_SW_acc02b6  results_SW_cf4898c  results_SW_d1520f0
bench/07.06/: AMD_SL_4d749ce  Intel_SL_4d749ce  Intel_SL_7ce90fe
bench/09.06/: AMD_SL_ba9bd23  Intel_SL_ba9bd23
bench/10.06/: AMD_2N_SL_4aae57d  AMD_4N_SL_4aae57d  Intel_4N_SL_4aae57d
bench/16.06/: Intel_1N_SL_de5b464
bench/17.06/: Intel_4N_SL_core_scatter_0a50d22  Intel_4N_SL_core_spread_0a50d22  Intel_4N_SL_numa_scatter_0a50d22  Intel_4N_SL_numa_spread_0a50d22
bench/18.06/: Intel_1N_SW_core_scatter_02b5015  Intel_1N_SW_core_spread_02b5015  Intel_1N_SW_numa_scatter_02b5015  Intel_1N_SW_numa_spread_02b5015
bench/19.05/: results_SW_d1520f0
bench/21.05/: results_SW_06b288e  results_SW_acc02b6  results_SW_cf4898c
bench/22.05/: results_SL_1debe35  results_SL_c70603b
bench/23.05/: results_SL_1875fd8  results_SL_289a2f3
logs/cluster/: job_5853451.err  job_5853606.err  job_5853609.err  job_5853730.out  job_5854593.out  job_5854608.out  job_5854613.err  job_5854660.out  job_5854724.out  job_5854728.out  job_5854729.out  job_5871582.err  job_5871582.out  job_5871583.err  job_5871632.out  job_5878728.out  job_5878729.err  job_5878729.out  job_5878730.err  job_5878731.out  job_5889110.err  job_5889110.out  job_5889150.err  job_5889237.out  job_5889272.out  job_5889273.err  job_5889273.out  job_5889274.out  job_5895720.out  job_5895721.err  job_5895722.out  job_5900186.err  job_5910662.out  job_5914396.out  job_5914398.out  job_5914399.out  job_5914400.err  job_5914400.out  job_5914518.out  job_5914646.out  (+22 more)
scripts/: benchmark_run.py  benchmark_runs.py  benchmark_sweep.py  build_all.sh  build_all_presets.sh  build_release_native.sh  rebuild_all.sh  rebuild_release_native.sh
scripts/cluster/: CF_01.job  CF_02.job  CF_03.job  CF_05.job  PF_01.job  PF_02.job  SL_01.job  SL_02.job  SL_03.job  SL_04.job  SW_01.job  SW_03.job  test_A.job
scripts/cluster/bench/: bench_A.job  bench_A2.job  bench_A3.job  bench_A5.job  bench_B.job  bench_B2.job  bench_B3.job  bench_B4.job  bench_C.job  bench_C2.job  bench_C3.job  bench_C5.job  bench_D.job  bench_D2.job  bench_D3.job  bench_D4.job  bench_D5.job  bench_E.job  bench_E3.job  bench_E4.job  bench_E5.job  bench_F.job  bench_F2.job  bench_F3.job  bench_F4.job  bench_G3.job
scripts/cluster/bench/bulk/: bench_D.job  bench_E2.job  bench_F.job  bench_F5.job  bench_G5.job
scripts/cluster/bench/special/: bench_decomp_C2.job  bench_decomp_D.job  check_A.job  long_B.job  long_C.job  long_D.job  nopin_A.job  nopin_B.job
scripts/cluster/bench_bulk/bench_A/: job_5871580.err  job_5871580.out  summary_5871631.md
scripts/cluster/bench_bulk/bench_A2/: job_5878726.out  summary_5878726.md
scripts/cluster/bench_bulk/bench_A3/: summary_5914646.md
scripts/cluster/bench_bulk/bench_A4/: bench_A4.job  job_5895469.out  summary_5895469.md
scripts/cluster/bench_bulk/bench_A5/: summary_5900184.md
scripts/cluster/bench_bulk/bench_B/: bench_B.job  summary_5871632.md
scripts/cluster/bench_bulk/bench_B2/: job_5878728.err  summary_5878728.md
scripts/cluster/bench_bulk/bench_B3/: job_5914647.err
scripts/cluster/bench_bulk/bench_B4/: job_5895468.err  job_5895468.out  summary_5895468.md
scripts/cluster/bench_bulk/bench_B5/: bench_B5.job  job_5895722.err  job_5900185.out  summary_5900185.md
scripts/cluster/bench_bulk/bench_C/: bench_C.job  job_5871583.out  job_5871633.err  job_5871633.out  summary_5871633.md
scripts/cluster/bench_bulk/bench_C2/: summary_5878729.md
scripts/cluster/bench_bulk/bench_C4/: bench_C4.job
scripts/cluster/bench_bulk/bench_C5/: job_5895721.out  job_5900186.out  summary_5914517.md
scripts/cluster/bench_bulk/bench_D/: summary_5871634.md
scripts/cluster/bench_bulk/bench_D2/: summary_5878730.md
scripts/cluster/bench_bulk/bench_D3/: summary_5914649.md
scripts/cluster/bench_bulk/bench_D4/: job_5895466.err
scripts/cluster/bench_bulk/bench_D5/: summary_5910662.md
scripts/cluster/bench_bulk/bench_E/: job_5871635.err  summary_5871635.md
scripts/cluster/bench_bulk/bench_E2/: summary_5878731.md
scripts/cluster/bench_bulk/bench_E4/: summary_5895465.md
scripts/cluster/bench_bulk/bench_E5/: job_5895719.err  job_5895719.out  summary_5914518.md
scripts/cluster/bench_bulk/bench_F5/: summary_5895718.md
scripts/cluster/bench_bulk/bench_G5/: job_5915986.out  summary_5915986.md
scripts/cluster/sim/: sim_CF_A.job  sim_CF_B.job  sim_PF_A.job  sim_PF_B.job  sim_PF_C.job  sim_SL_A.job  sim_SL_B.job  sim_SL_C.job  sim_SW_A.job  sim_SW_B.job
source/: domain.f90  exchange.f90  export.f90  hardware_info.f90  initialization.f90  main.f90  reporting.f90  settings.f90  simulation.f90
source/experiments/: exchange.f90  initialization.f90  main.f90
source/experiments/checkpoint_0/: simulation.f90
source/experiments/checkpoint_1/: simulation.f90
source/experiments/checkpoint_2/: simulation.f90
source/layouts/dxy/: exchange.f90  initialization.f90  main.f90  simulation.f90
source/layouts/xyd/: exchange.f90  main.f90  simulation.f90
source/sim/: couette_flow.f90  legacy.f90  poiseuille_flow.f90  shear_wave.f90  sliding_lid.f90
visual/: plot_1.py  plot_2.py  plot_3.py  plot_A.py  plot_B.py  plot_C.py  plot_D.py  plot_decay.py
visual/shear_wave/: plot_A.py  plot_B.py  plot_C.py
visual/sliding_lid/: plot_A.py  plot_B.py  plot_C.py
(+77 files in other folders)
